--- a/about1.html
+++ b/about1.html
@@ -86,7 +86,7 @@
                     </div>
                     <div id="members">
                         <button id="mem_button" class="mem_button1" onclick="toggleContent1()">Daniel Lau Zhe Kai</button>
-                        <button id="mem_button" class="mem_button2">Jordan Ooi Zixian</button>
+                        <button id="mem_button" class="mem_button2" onclick="toggleContent2()">Jordan Ooi Zixian</button>
                         <button id="mem_button" class="mem_button3" onclick="toggleContent3()">Oh Kuan Qi</button>
                         <button id="mem_button" class="mem_button4" onclick="toggleContent4()">Poon Chun Lok</button>
                     </div>
@@ -114,6 +114,97 @@
                                         <p id="desc1" class="desc1">Bachelor of Science (Honours) in Computer Science</p>
                                         <p id="desc1" class="desc1">Sunway University,&nbsp;Malaysia</p>
                                         <p id="desc1" class="desc1">2025&nbsp;-&nbsp;present</p>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div id="profile2" class="profile2">
+                        <p class="header">About</p>
+                        <p class="description">Motivated and detail-oriented individual with a strong passion for technology and problem-solving. Raised by
+                        a single mother with two siblings, I have always strived to ease her financial burden by taking on part-time
+                        tutoring jobs during high school (SPM) while balancing my academic commitments. My journey has taught me
+                        resilience, adaptability, and the importance of hard work. as well as pursuing internships to gain professional
+                        experience. After completing my foundation studies, I took a break to gain real-world experience through an
+                        internship at Prudential as an insurance agent, where I developed valuable skills. My experiences and
+                        choices have led me to this scholarship opportunity, and I am eager to leverage this chance to further
+                        support those around me.</p>
+                            <div id="education" class="education">
+                                <p class="header">Education</p>
+                                <div id="grid-container2" class="grid-container2">
+                                    <div id="box1" class="box1">
+                                        <p id="desc1" class="desc1">Sijil Pelajaran Malaysia (SPM)</p>
+                                        <p id="desc1" class="desc1">SMK Cyberjaya,&nbsp;Malaysia</p>
+                                        <p id="desc1" class="desc1">2018&nbsp;-&nbsp;2023</p>
+                                    </div>
+                                    <div id="box2" class="box2">
+                                        <p id="desc1" class="desc1">Foundation in Science & Technology</p>
+                                        <p id="desc1" class="desc1">Sunway College,&nbsp;Malaysia
+                                        <p id="desc1" class="desc1">2023&nbsp;-&nbsp;2024</p>
+                                    </div>
+                                    <div id="box3" class="box3">
+                                        <p id="desc1" class="desc1">Bachelor of Science (Honours) in Computer Science</p>
+                                        <p id="desc1" class="desc1">Sunway University,&nbsp;Malaysia</p>
+                                        <p id="desc1" class="desc1">2025&nbsp;-&nbsp;present</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="experience" class="experience">
+                                <p class="header">Education</p>
+                                <div id="grid-container2" class="grid-container2">
+                                    <div id="box1" class="box1">
+                                        <p id="desc1" class="desc1">Insurance Agent Intern</p>
+                                        <p id="desc1" class="desc1">Prudential</p>
+                                        <p id="desc1" class="desc1">2024&nbsp;-&nbsp;present</p>
+                                    </div>
+                                    <div id="box2" class="box2">
+                                        <p id="desc1" class="desc1">Part-Time Tuition Tutor</p>
+                                        <p id="desc1" class="desc1">Self-Employed</p>
+                                        <p id="desc1" class="desc1">2022&nbsp;-&nbsp;present</p>
+                                    </div>
+                                    <div id="box3" class="box3">
+                                        <p id="desc1" class="desc1">President</p>
+                                        <p id="desc1" class="desc1">Sunway Foundation Programme Student Committee</p>
+                                        <p id="desc1" class="desc1">2024</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="skills" class="skills">
+                                <p class="header">Key Competencies</p>
+                                <div id="grid-container2" class="grid-container2">
+                                    <div id="box1" class="box1">
+                                        <p id="desc1" class="desc1">Strong Interpersonal Skills</p>
+                                    </div>
+                                    <div id="box2" class="box2">
+                                        <p id="desc1" class="desc1">Proactive and Self-Motivated</p>
+                                    </div>
+                                    <div id="box3" class="box3">
+                                        <p id="desc1" class="desc1">Problem Solving</p>
+                                    </div>
+                                    <div id="box4" class="box4">
+                                        <p id="desc1" class="desc1">Excellent Communication Skills</p>
+                                    </div>
+                                    <div id="box5" class="box5">
+                                        <p id="desc1" class="desc1">Leader and Team-Player</p>
+                                    </div>
+                                    <div id="box6" class="box6">
+                                        <p id="desc1" class="desc1">Adaptability</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="skills" class="skills">
+                                <p class="header">Hobbies</p>
+                                <div id="grid-container2" class="grid-container2">
+                                    <div id="box1" class="box1">
+                                        <p id="desc1" class="desc1">Playing guiter and 8-ball pool</p>
+                                    </div>
+                                    <div id="box2" class="box2">
+                                        <p id="desc1" class="desc1">Spending time with friends and family</p>
+                                    </div>
+                                    <div id="box3" class="box3">
+                                        <p id="desc1" class="desc1">Reading self-improvement books</p>
+                                    </div>
+                                    <div id="box4" class="box4">
+                                        <p id="desc1" class="desc1">Going to the gym</p>
                                     </div>
                                 </div>
                             </div>
