--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -41,7 +41,13 @@
                 </div>
                 <div class="con">About Us</div>
             </a>
-
+                
+            <a class="item" onclick="switchtheme()">
+                <div class="licon"> 
+                    <img id="theme-icon" src="../images/sun.png"> 
+                </div>
+                <div class="con" id="theme-text">Light Mode</div> 
+            </a>
         </div>
     </div>
 
@@ -68,10 +74,10 @@
                         <h1>New Event</h1>
                         <form id="eventForm">
                             <label for='eventName'>Event Name</label> 
-                            <input type="text" id="eventName" required> <br>
+                            <input type="text" id="eventName" maxlength="18" required> <br>
                             Date: <input type="date" id="eventDate" required> <br>
                             Time: <input type="time" id="eventTime" required> <br>
-                            Description: <input type="text" id="eventDesc">
+                            Description: <input type="text" id="eventDesc" maxlength="20">
                             <input type="submit" value="Save Event">
                         </form>
                     </div>
