--- a/main-page.html
+++ b/main-page.html
@@ -31,34 +31,28 @@
     </video>
     <div class="navigation-bar">
         <div class="right-column" id="rightColumn">
-            <a href="todo/index.html" class="navigation">
+            <a href="todo.html" class="navigation">
                 <span class="material-symbols-outlined">notes</span>
                 <div class="nav-description">Notes</div>
             </a>
-            <a href="/calendar/calendar.html" class="navigation" >
+            <a href="calendar.html" class="navigation" >
                 <span class="material-symbols-outlined">
                     today
                 </span>
             <div class="nav-description">Cal</div>
             </a>      
-            <a href="/about1.html" class="navigation">
+            <a href="about1.html" class="navigation">
                 <span class="material-symbols-outlined">
                     emoji_people
                 </span>
             <div class="nav-description">About Us</div>
             </a>
-            <a href="/login/login.html" class="navigation">
+            <a href="index.html" class="navigation">
                 <span class="material-symbols-outlined">
                     logout
                  </span>
             <div class="nav-description">Log Out</div>
             </a>
-            <!-- <a href="#" class="navigation"> -->
-            <!--     <span class="material-symbols-outlined"> -->
-            <!--         sunny -->
-            <!--     </span> -->
-            <!-- <div class="nav-description">Light</div> -->
-            <!-- </a> -->
         </div>
     </div>
     
