--- a/todo.html
+++ b/todo.html
@@ -7,8 +7,6 @@
 		<style>
 		@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Inter&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 		</style>
-		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 	<body>
 		<button onmousedown="togglemobilemenu()" class="mobile-menu-btn" id="mobile-menu-btn">
@@ -20,7 +18,7 @@
 				<a list="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82" onclick="update_current_list('35fd7e4c-5e49-4b36-8d81-f9da7b66bc82')" class="list-item" >
 					<li id="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82_nav_title">LIST</li>
 					<p id="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82_num" class="tasks-num">0</p>
-					<span id="first-x" class="material-symbols-outlined setting">close_small</span>
+					<img src="/images/close_small.png" id="first-x" class="logo setting"></span>
 					</div>
 				</a>
 			</ul>
@@ -33,11 +31,8 @@
 				    <p>Add New List</p>
 				</div>
 			</a>
-			<a href="/Web1201/login/login.html"class="logout">
-			<span class="material-symbols-outlined">
-			    logout
-			 </span>
-			 Logout
+			<a href="index.html"class="logout">
+			<img src="/images/logout.png"class="logo">Logout</img>
 			</a>
 			<div class="profile">
 				<a href="#">
@@ -54,10 +49,10 @@
 				</div>
 				<nav class="right-nav">
 					<ul class="right-ul">
-						<li><a class="right-ul-li" href="/Web1201/main-page/main-page.html"><span class="material-symbols-outlined">home</span>Home</a></li>
-						<li><a class="right-ul-li" href="/Web1201/calendar/calendar.html"><span class="material-symbols-outlined">today</span>Calendar</a></li>
-						<li><a class="right-ul-li" href="/Web1201/about.html"><span class="material-symbols-outlined">emoji_people</span>About Us</a></li>
-						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><span class="material-symbols-outlined">light_mode</span>Theme</a></li>
+						<li><a class="right-ul-li" href="main-page.html"><img src="/images/home.png" class="logo"></img>Home</a></li>
+						<li><a class="right-ul-li" href="calendar.html"><img src="/images/calendar.png" class="logo"></img>Calendar</a></li>
+						<li><a class="right-ul-li" href="about1.html"><img src="/images/aboutus.png" class="logo"></img>About Us</a></li>
+						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><img src="/images/light.png" class="logo"></img>Theme</a></li>
 					</ul>
 				</nav>
 			</div>
