--- a/main-page.html
+++ b/main-page.html
@@ -32,25 +32,19 @@
     <div class="navigation-bar">
         <div class="right-column" id="rightColumn">
             <a href="todo.html" class="navigation">
-                <span class="material-symbols-outlined">notes</span>
+                <img src ='images/notes.png' class="logo"></img>
                 <div class="nav-description">Notes</div>
             </a>
             <a href="calendar.html" class="navigation" >
-                <span class="material-symbols-outlined">
-                    today
-                </span>
+                <img src="images/calendar.png" class="logo"></img>
             <div class="nav-description">Cal</div>
             </a>      
             <a href="about1.html" class="navigation">
-                <span class="material-symbols-outlined">
-                    emoji_people
-                </span>
+                <img src="/images/aboutus.png" class="logo"></img>
             <div class="nav-description">About Us</div>
             </a>
             <a href="index.html" class="navigation">
-                <span class="material-symbols-outlined">
-                    logout
-                 </span>
+                <img src="/images/logout.png"class="logo"></img>
             <div class="nav-description">Log Out</div>
             </a>
         </div>
@@ -61,20 +55,19 @@
 
             <div class="side-nav-bar" id="sideNavBar">
                 <button class="side-button" id="Spaces">
-                    <span class="material-symbols-outlined">globe</span>
+                    <img src="/images/globe.png" class="logo"></img>
                     <div class="nav-description">Spaces</div>
                 </button>
                 <button class="side-button" id="Sounds">
-                    <span class="material-symbols-outlined">volume_up</span>
+                    <img src="/images/volume.png" class="logo"></img>
                     <div class="nav-description">Sounds</div>
                 </button>
                 <button class="side-button" id="Timer">
-                    <span class="material-symbols-outlined">timer</span>
+                    <img src="/images/timer.png" class="logo"></img>
                     <div class="nav-description">Timer</div>
                 </button>
                 <button class="side-button" id="Motivation">
-                    <span class="material-symbols-outlined">
-                        heart_plus</span>                   
+                    <img src="/images/motivation.png" class="logo"></img>                   
                     <div class="nav-description">Motivation</div>
                 </button>
             </div>
