fixed light/dark mode on todolist and login

--- a/todo.html
+++ b/todo.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<button onmousedown="togglemobilemenu()" class="mobile-menu-btn" id="mobile-menu-btn">
-			<span class="material-symbols-outlined">menu</span>
+			<img src="images/menu.png" class="logo"></img>
 		</button>
 		<nav id="left-nav" class="left-nav">
 			<p class="tasks-text">MENU</p>
@@ -52,7 +52,7 @@
 						<li><a class="right-ul-li" href="main-page.html"><img src="/images/home.png" class="logo"></img>Home</a></li>
 						<li><a class="right-ul-li" href="calendar.html"><img src="/images/calendar.png" class="logo"></img>Calendar</a></li>
 						<li><a class="right-ul-li" href="about1.html"><img src="/images/aboutus.png" class="logo"></img>About Us</a></li>
-						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><img src="/images/light.png" class="logo"></img>Theme</a></li>
+						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><img src="/images/moon.png" class="logo"></img>Theme</a></li>
 					</ul>
 				</nav>
 			</div>
