--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
         </style>
-        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"> -->
+        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     </head>
     <body>
         <div class="main-container">
@@ -31,7 +31,7 @@
                         </div>
                         <div class="input-div">
                             <label class="vague"  for="password">Password</label>
-                            <input minlength=8 autocomplete="off" type="password" id="password" name="password" required><span class="eye material-symbols-outlined">visibility</span></input>
+                            <input minlength=8 autocomplete="off" type="password" id="password" name="password" required><img src="images/visibility.png" class="eye logo"></img></input>
                             <p id="error" class="error">incorrect username or password.</p>
                             <a href="#" onclick="alert('CREDENTIALS ARE \nadmin:password')" class="link forgot">Forgot password?</a>
                         </div>
@@ -43,31 +43,31 @@
         </div>
         <div class="register-modal" id="register-modal">
                     <form class="register-form" id="register" method="POST" action="javascript:register()">
-                        <span id="modal-close" class="close material-symbols-outlined">close</span>
+                        <img src="images/close_small.png" id="modal-close" class="close logo"></img>
                         <div>
                             <p class="login-text register-text"><span class="material-symbols-outlined">account_box</span>Register</p>
                         </div>
                         <div class="input-div register_input_div">
                             <label class="vague" for="username">*Username</label>
                             <input autocomplete="off" type="text" id="register_username" name="username" minlength=5 maxlength=15 required></input>
-                            <p id="username_error" class="register_error"><span class="material-symbols-outlined">close</span>username may only contain letters, numbers, and the characters _ . @ (space) and -</p>
+                            <p id="username_error" class="register_error"><img src="images/close_small.png" class="logo"></img>username may only contain letters, numbers, and the characters _ . @ (space) and -</p>
                         </div>
                         <div class="input-div register_input_div">
                             <label class="vague"  for="password">*Password</label>
-                            <input minlength=8 autocomplete="off" type="password" id="register_password" name="password" required><span class="eye material-symbols-outlined">visibility</span></input>
-                            <p id="password_error" class="register_error"><span class="material-symbols-outlined">close</span>password must be at least 8 characters long. Only contain letters, numbers, and special characters</p>
+                            <input minlength=8 autocomplete="off" type="password" id="register_password" name="password" required><img src="images/visibility.png" class="eye logo"></img></input>
+                            <p id="password_error" class="register_error"><img src="images/close_small.png" class="logo"></img>password must be at least 8 characters long. Only contain letters, numbers, and special characters</p>
                         </div>
                         <div class="input-div register_input_div">
                             <label class="vague" for="confirm">*Confirm Password</label>
-                            <input minlength=8 autocomplete="off" type="password" id="register_confirm_password" name="confirm" required><span class="eye material-symbols-outlined">visibility</span></input>
-                            <p id="confirm_error" class="register_error"><span class="material-symbols-outlined">close</span>Must be Same as Password</p>
+                            <input minlength=8 autocomplete="off" type="password" id="register_confirm_password" name="confirm" required><img src="images/visibility.png" class="eye logo"></img></input>
+                            <p id="confirm_error" class="register_error"><img src="images/close_small.png" class="logo"></img>Must be Same as Password</p>
                         </div>
                         <button id="login-button" type="submit" class="login-button margin-top">Register</button><br>
             </form>
         </div>
             <nav class="right-nav">
                     <ul class="right-ul">
-                            <li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><span class="material-symbols-outlined">light_mode</span>Theme</a></li>
+                            <li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><img src="images/light.png" class="logo"></img>Theme</a></li>
                     </ul>
             </nav>
     </body>
