--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
         </style>
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"> -->
-        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     </head>
     <body>
         <div class="main-container">
             <div class="left-container">
-                    <img src="../images/left.jpg">
+                    <img src="/images/left.jpg">
                 </ul>
             </div>
             <div class="right-container">
@@ -45,7 +43,7 @@
                     <form class="register-form" id="register" method="POST" action="javascript:register()">
                         <img src="images/close_small.png" id="modal-close" class="close logo"></img>
                         <div>
-                            <p class="login-text register-text"><span class="material-symbols-outlined">account_box</span>Register</p>
+                            <p class="login-text register-text"><img src="/images/account_box.png" class="logo"></img>Register</p>
                         </div>
                         <div class="input-div register_input_div">
                             <label class="vague" for="username">*Username</label>
