--- a/about1.html
+++ b/about1.html
@@ -27,7 +27,7 @@
         </div>
         <div class="nav">
                 <div class="left">
-                    <a href="#"><img src="images/john_doe.jpg">Admin</a>
+                    <a href="main-page.html"><img src="images/john_doe.jpg">Admin</a>
                 </div>
                 <div class="right" id="myNav1">
                     <a href="todo.html"><img src="images/notes.png" alt="notes">Notes</a>
