--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="main-container">
             <div class="left-container">
-                    <img src="/images/left.jpg">
+                    <img src="images/left.jpg">
                 </ul>
             </div>
             <div class="right-container">
@@ -43,7 +43,7 @@
                     <form class="register-form" id="register" method="POST" action="javascript:register()">
                         <img src="images/close_small.png" id="modal-close" class="close logo"></img>
                         <div>
-                            <p class="login-text register-text"><img src="/images/account_box.png" class="logo"></img>Register</p>
+                            <p class="login-text register-text"><img src="images/account_box.png" class="logo"></img>Register</p>
                         </div>
                         <div class="input-div register_input_div">
                             <label class="vague" for="username">*Username</label>
