--- a/main-page.html
+++ b/main-page.html
@@ -40,11 +40,11 @@
             <div class="nav-description">Cal</div>
             </a>      
             <a href="about1.html" class="navigation">
-                <img src="/images/aboutus.png" class="logo"></img>
+                <img src="images/aboutus.png" class="logo"></img>
             <div class="nav-description">About Us</div>
             </a>
             <a href="index.html" class="navigation">
-                <img src="/images/logout.png"class="logo"></img>
+                <img src="images/logout.png"class="logo"></img>
             <div class="nav-description">Log Out</div>
             </a>
         </div>
@@ -55,19 +55,19 @@
 
             <div class="side-nav-bar" id="sideNavBar">
                 <button class="side-button" id="Spaces">
-                    <img src="/images/globe.png" class="logo"></img>
+                    <img src="images/globe.png" class="logo"></img>
                     <div class="nav-description">Spaces</div>
                 </button>
                 <button class="side-button" id="Sounds">
-                    <img src="/images/volume.png" class="logo"></img>
+                    <img src="images/volume.png" class="logo"></img>
                     <div class="nav-description">Sounds</div>
                 </button>
                 <button class="side-button" id="Timer">
-                    <img src="/images/timer.png" class="logo"></img>
+                    <img src="images/timer.png" class="logo"></img>
                     <div class="nav-description">Timer</div>
                 </button>
                 <button class="side-button" id="Motivation">
-                    <img src="/images/motivation.png" class="logo"></img>                   
+                    <img src="images/motivation.png" class="logo"></img>                   
                     <div class="nav-description">Motivation</div>
                 </button>
             </div>
