--- a/todo.html
+++ b/todo.html
@@ -2,8 +2,8 @@
 <html data-theme="dark">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="./todo.css"/>
-		<script src="./todo.js" defer></script>
+		<link rel="stylesheet" href="todo.css"/>
+		<script src="todo.js" defer></script>
 		<style>
 		@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Inter&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 		</style>
@@ -18,7 +18,7 @@
 				<a list="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82" onclick="update_current_list('35fd7e4c-5e49-4b36-8d81-f9da7b66bc82')" class="list-item" >
 					<li id="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82_nav_title">LIST</li>
 					<p id="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82_num" class="tasks-num">0</p>
-					<img src="/images/close_small.png" id="first-x" class="logo setting"></span>
+					<img src="images/close_small.png" id="first-x" class="logo setting"></span>
 					</div>
 				</a>
 			</ul>
@@ -32,11 +32,11 @@
 				</div>
 			</a>
 			<a href="index.html"class="logout">
-			<img src="/images/logout.png"class="logo">Logout</img>
+			<img src="images/logout.png"class="logo">Logout</img>
 			</a>
 			<div class="profile">
 				<a href="#">
-					<img src="../images/john_doe.jpg">
+					<img src="images/john_doe.jpg">
 					<p>Admin</p>
 				</a>
 			</div>
@@ -49,10 +49,10 @@
 				</div>
 				<nav class="right-nav">
 					<ul class="right-ul">
-						<li><a class="right-ul-li" href="main-page.html"><img src="/images/home.png" class="logo"></img>Home</a></li>
-						<li><a class="right-ul-li" href="calendar.html"><img src="/images/calendar.png" class="logo"></img>Calendar</a></li>
-						<li><a class="right-ul-li" href="about1.html"><img src="/images/aboutus.png" class="logo"></img>About Us</a></li>
-						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><img src="/images/moon.png" class="logo"></img>Theme</a></li>
+						<li><a class="right-ul-li" href="main-page.html"><img src="images/home.png" class="logo"></img>Home</a></li>
+						<li><a class="right-ul-li" href="calendar.html"><img src="images/calendar.png" class="logo"></img>Calendar</a></li>
+						<li><a class="right-ul-li" href="about1.html"><img src="images/aboutus.png" class="logo"></img>About Us</a></li>
+						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><img src="images/moon.png" class="logo"></img>Theme</a></li>
 					</ul>
 				</nav>
 			</div>
