--- a/about1.html
+++ b/about1.html
@@ -52,9 +52,12 @@
                     <div id="about">
                         <div>
                             <p class="header">About Us</p>
-                            <p class="description">We are a team of 4 students pursuing a degree in computer science at Sunway University.</p>
-                            <p class="description">This website is dedicated to students wanting to manage their workflow more efficiently,&nbsp;allowing for lesser time needed to complete tasks.</p>
-                            <p class="description">For individual portfolios,&nbsp;click on one of the names on the bottom menu.</p>
+                            <p class="description" style="padding-bottom: 10px;">This website is dedicated to students wanting a better workflow,&nbsp;reducing time needed to complete tasks.</p>
+                            <p class="description_cont">Contributions:-</p>
+                            <p class="description_cont">Ben:&nbsp;Login and Notes Pages</p>
+                            <p class="description_cont">Daniel:&nbsp;Calendar Page</p>
+                            <p class="description_cont">Jordan:&nbsp;Main Page</p>
+                            <p class="description_cont">Kuan Qi:&nbsp;About Page</p>
                         </div>
                     </div>
                     <div id="personal_about1">
