--- a/calendar.html
+++ b/calendar.html
@@ -42,6 +42,13 @@
                 <div class="con">About Us</div>
             </a>
                 
+            <a href="todo.html" class="item">
+                <div class="licon">
+                    <img src ="images/notes.png">
+                </div>
+                <div class="con">Notes</div>
+            </a>
+
             <a class="item" onclick="switchtheme()">
                 <div class="licon"> 
                     <img id="theme-icon" src="images/sun.png"> 
