fixed some bugs

--- a/about1.html
+++ b/about1.html
@@ -33,7 +33,7 @@
                     <a href="main-page.html"><img src="images/home.png" alt="notes">Home</a>
                     <a href="todo.html"><img src="images/notes.png" alt="notes">Notes</a>
                     <a href="calendar.html"><img src="images/calendar.png" alt="calendar">Calendar</a>
-                    <a href="login.html"><img src="images/logout.png" alt="logout">Log Out</a>
+                    <a href="index.html"><img src="images/logout.png" alt="logout">Log Out</a>
                     <a id="darkModeToggle" href="#"><img src="images/light.png" alt="sunny">Light</a>
                 </div>
                 <div class="smallclose">
