--- a/about.html
+++ b/about.html
@@ -68,21 +68,21 @@
                     </div>
                                        
                     <div id="personal_about2">
-                        <img src="images/john_doe.jpg" alt="Image">
+                        <img src="images/john_doe1.jpeg" alt="Image">
                         <p class="details">Name:&nbsp;Jordan Ooi Zixian
                         <br><br>Course:&nbsp;Bachelor of Science (Honours) in Computer Science
                         <br><br>School: &nbsp;Sunway University</p>
                     </div>                 
 
                     <div id="personal_about3">
-                        <img src="images/john_doe.jpg" alt="Image">
+                        <img src="images/john_doe2.png" alt="Image">
                         <p class="details">Name:&nbsp;Oh Kuan Qi
                         <br><br>Course:&nbsp;Bachelor of Science (Honours) in Computer Science
                         <br><br>School: &nbsp;Sunway University</p>
                     </div>
 
                     <div id="personal_about4">
-                        <img src="images/john_doe.jpg" alt="Image">
+                        <img src="images/john_doe3.png" alt="Image">
                         <p class="details">Name:&nbsp;Poon Chun Lok
                         <br><br>Course:&nbsp;Bachelor of Science (Honours) in Computer Science
                         <br><br>School: &nbsp;Sunway University</p>
@@ -123,12 +123,12 @@
                     </div>
                     <div id="profile2" class="profile2">
                         <p class="header">About</p>
-                        <p class="description">Motivated and detail-oriented individual with a strong passion for technology and problem-solving. Raised by
-                        a single mother with two siblings, I have always strived to ease her financial burden by taking on part-time
-                        tutoring jobs during high school (SPM) while balancing my academic commitments. My journey has taught me
-                        resilience, adaptability, and the importance of hard work. as well as pursuing internships to gain professional
-                        experience. After completing my foundation studies, I took a break to gain real-world experience through an
-                        internship at Prudential as an insurance agent, where I developed valuable skills. My experiences and
+                        <p class="description">Motivated and detail-oriented individual with a strong passion for technology and problem-solving.&nbsp;Raised by
+                        a single mother with two siblings,&nbsp;I have always strived to ease her financial burden by taking on part-time
+                        tutoring jobs during high school (SPM) while balancing my academic commitments.&nbsp;My journey has taught me
+                        resilience, adaptability, and the importance of hard work, as well as pursuing internships to gain professional
+                        experience.&nbsp;After completing my foundation studies, I took a break to gain real-world experience through an
+                        internship at Prudential as an insurance agent, where I developed valuable skills.&nbsp;My experiences and
                         choices have led me to this scholarship opportunity, and I am eager to leverage this chance to further
                         support those around me.</p>
                             <div id="education" class="education">
@@ -239,13 +239,43 @@
                                     </div>
                                 </div>
                             </div>
+                            <div id="experience" class="experience">
+                                <p class="header">Experience</p>
+                                    <div id="grid-container4" class="grid-container4">
+                                        <div id="box1" class="box1">
+                                            <p id="desc1" class="desc1">Retail Teaching Assistant</p>
+                                            <p id="desc1" class="desc1">Robot Space Sdn. Bhd.</p>
+                                            <p id="desc1" class="desc1">2024&nbsp;-&nbsp;2025</p>
+                                        </div>
+                                    </div>
+                            </div>
+                            <div id="expertise" class="expertise">
+                                <p class="header">Expertise</p>
+                                <div id="grid-container3" class="grid-container3">
+                                        <div id="box1" class="box1">
+                                            <p id="desc1" class="desc1">Website Building</p>
+                                        </div>
+                                        <div id="box2" class="box2">
+                                            <p id="desc1" class="desc1">Programming</p>
+                                        </div>
+                                        <div id="box3" class="box3">
+                                            <p id="desc1" class="desc1">Robotics</p>
+                                        </div>
+                                        <div id="box4" class="box4">
+                                            <p id="desc1" class="desc1">Leadership</p>
+                                        </div>
+                                        <div id="box5" class="box5">
+                                            <p id="desc1" class="desc1">Teaching</p>
+                                        </div>
+                                        <div id="box6" class="box6">
+                                            <p id="desc1" class="desc1">Administration</p>
+                                        </div>
+                                </div>
+                            </div>
                     </div>
                     <div id="profile4" class="profile4">
                         <p class="header">About</p>
-                        <p class="description">Born and raised in Hong Kong, I grew up exceedingly keen on learning about technology. 
-                        During high school, numerous data breaches and viruses like WannaCry dominated the headlines, which piqued my interest. 
-                        I decided to teach myself programming, learning Python, HTML, CSS, and JavaScript. Through this process, I became immersed in the fascinating world of computing. 
-                        I hope to use my skills to secure the internet and create software that benefits humanity.</p>
+                        <p class="description">Born and raised in Hong Kong,&nbsp;I grew up exceedingly keen on learning about technology.&nbsp;During high school,&nbsp;numerous data breaches and viruses like WannaCry dominated the headlines,&nbsp;which piqued my interest.&nbsp;I decided to teach myself programming,&nbsp;learning Python,&nbsp;HTML,&nbsp;CSS,&nbsp;and JavaScript.&nbsp;Through this process,&nbsp;I became immersed in the fascinating world of computing.&nbsp;I hope to use my skills to secure the internet and create software that benefits humanity.</p>
                             <div id="education" class="education">
                                 <p class="header">Education</p>
                                 <div id="grid-container2" class="grid-container2">
