--- a/calendar.html
+++ b/calendar.html
@@ -35,7 +35,7 @@
                 <div class="con">Notes</div>
             </a>
 
-            <a href="about1.html" class="item">
+            <a href="about.html" class="item">
                 <div class="licon">
                     <img src ="images/aboutus.png">
                 </div>
