--- a/main-page.html
+++ b/main-page.html
@@ -39,7 +39,7 @@
                 <img src="images/calendar.png" class="logo"></img>
             <div class="nav-description">Cal</div>
             </a>      
-            <a href="about1.html" class="navigation">
+            <a href="about.html" class="navigation">
                 <img src="images/aboutus.png" class="logo"></img>
             <div class="nav-description">About Us</div>
             </a>
