--- a/todo.html
+++ b/todo.html
@@ -51,7 +51,7 @@
 					<ul class="right-ul">
 						<li><a class="right-ul-li" href="main-page.html"><img src="images/home.png" class="logo"></img>Home</a></li>
 						<li><a class="right-ul-li" href="calendar.html"><img src="images/calendar.png" class="logo"></img>Calendar</a></li>
-						<li><a class="right-ul-li" href="about1.html"><img src="images/aboutus.png" class="logo"></img>About Us</a></li>
+						<li><a class="right-ul-li" href="about.html"><img src="images/aboutus.png" class="logo"></img>About Us</a></li>
 						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><img src="images/moon.png" class="logo"></img>Theme</a></li>
 					</ul>
 				</nav>
