--- a/calendar.html
+++ b/calendar.html
@@ -12,7 +12,7 @@
             <div class="icon-img"><img src="images/john_doe.jpg" alt=""/></div>
             <div class="icon-con"> 
                 <p>Good Day</p>
-                <h2>John Doe</h2>
+                <h2>Admin</h2>
             </div>
         </div>
         
